...
export default function HomeScreen() {
  return (
    <ThemedView style={styles.container}>
      <SafeAreaView style={styles.safeArea}>
        <ThemedView style={styles.heroSection}>
          <AnimatedIcon />
          <ThemedText testID="home-title" type="title" style={styles.title}>
            Welcome to Expo 🎉
          </ThemedText>
        </ThemedView>

        <ThemedText type="code" style={styles.code}>
          get started
...
