appId: com.testmaestrocli
---
- launchApp
- extendedWaitUntil:
    visible:
      id: "home-title"
    timeout: 30000
- assertVisible:
    id: "home-title"
- tapOn:
    text: "Explore"
- extendedWaitUntil:
    visible:
      id: "explore-title"
    timeout: 10000
- assertVisible:
    id: "explore-title"
- tapOn:
    id: "collapsible-file-routing"
- assertVisible:
    text: "This app has two screens"
- tapOn:
    text: "Home"
- extendedWaitUntil:
    visible:
      id: "home-title"
    timeout: 10000
